--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body {
-    margin: auto;
-    padding: auto;
+    margin: 0;
+    padding: 0;
     font-family: 'Poppins';
     top: -541px;
     left: -939px;
@@ -53,7 +53,7 @@ header {
     justify-content: center;
     width: auto;
     height: auto;
-    padding: 130px 0 0 0;
+    padding-top: 130px;
     background-image: url('../images/bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -168,6 +168,7 @@ header {
     }
     #home {
         flex-direction: column;
+
     }
 
     #left-container {
@@ -193,7 +194,7 @@ header {
         margin-left: 42px;
         font-size: 30px;
         text-align: center;
-        border: 2px solid yellow;
+    
     }
 
     #intro-text p {
@@ -203,14 +204,12 @@ header {
         margin-left: 42px;
         font-family: 'Poppins';
         text-align: center;
-        border: 2px solid green;
+        
         
     }
 
     #buttons {
-        border: 2px solid white;
         margin-left: 45px;
-        
         justify-content: center;
     }
 
