--- a/styles/main.css
+++ b/styles/main.css
@@ -243,7 +243,6 @@ body {
 }
 
 #grid {
-  border: 2px solid darkorange;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -256,15 +255,28 @@ body {
   /* border: 2px solid darkorange; */
   background-color: #23263A;
   margin: 20px;
-  padding: 20px;
-  margin: 20px;
-  width: 300px;
-  height: 300px;
-  border-radius: 10px;
+  padding: 50px;
+  width: 250px;
+  height: 200px;
+  border-radius: 20px;
+  transition: 0.5s;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.8s;
 }
 
-.iconica {
-  border: 1px solid green;
+.cards:hover {
+  background-color: #FF4A57;
+}
+.cards:hover .iconica i {
+  color: #fff;
+  transform: rotateY(360deg);
+}
+
+.iconica i {
+  font-size: 40px;
+  color: #FF4A57;
+  transition: transform 1.6s;
 }
 
 @media screen and (max-width: 768px) {
