--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,7 @@
 $bgColor1: #1F2235;
 $bgColor2: #24263b;
 $pinkColor: #FF4A57;
+$white: #fff;
 
 
 body {
@@ -273,7 +274,7 @@ body {
 }
 
 #grid {
-    border: 2px solid darkorange; 
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -281,26 +282,49 @@ body {
     flex-wrap: wrap;
     padding: 20px 0 20px 0;
     
-    
-    
-    
 }
 
 .cards {
     /* border: 2px solid darkorange; */
     background-color: #23263A;
     margin: 20px;
-    padding: 20px;
-    margin: 20px;
-    width: 300px;
-    height: 300px;
-    border-radius: 10px;
+    padding: 50px;
+    width: 250px;
+    height: 200px;
+    border-radius: 20px;
+    transition: .5s;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.8s;
+
     
 }
 
-.iconica {
-    border: 1px solid green;
+.cards:hover {
+    background-color: $pinkColor;
+
+    .iconica i{
+        color: $white;
+        transform: rotateY(360deg);
+        
+
+        
+        
+    }
+    
 }
+
+.iconica i {
+    font-size: 40px;
+    color: $pinkColor;
+    transition: transform 1.6s;
+    
+    
+    
+}
+
+
+
 
 
 
