--- a/styles/main.scss
+++ b/styles/main.scss
@@ -46,6 +46,7 @@ body {
     font-size: 15px;
     font-weight: 500;
     padding: 10px 15px; 
+
 }
 
 .navItem a:hover {
@@ -182,6 +183,15 @@ body {
 
 @media screen and (max-width: 768px) {
     #header {
+        margin-left: -39px;
+    }
+    #navbar {
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    #navbar {
+        
         display: none;
     }
 
@@ -246,7 +256,7 @@ body {
     margin: 0 350px 0 350px;
     width: 539.98;
     height: 205.4;
-    display: block;
+    
 }
 
 .services-text h4 {
@@ -256,7 +266,7 @@ body {
 }
 
 .services-text h2 {
-    font-size: 62px;
+    font-size: 55px;
     font-weight: bold;
     margin: 0 0 25px;
     width: 539.98;
@@ -296,8 +306,6 @@ body {
     justify-content: center;
     align-items: center;
     transition: background-color 0.8s;
-
-    
 }
 
 .cards:hover {
@@ -319,14 +327,7 @@ body {
     color: $pinkColor;
     transition: transform 1.6s;
     
-    
-    
 }
-
-
-
-
-
 
 @media screen and (max-width: 768px) {
     .services-text {
@@ -337,7 +338,6 @@ body {
     }
 
     .services-text h2 {
-        line-height: 1.2;
         margin-bottom: 25px;
         width: 320;
         height: 148.72;
