--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,7 @@ body {
 /* ++++++++++++++++++++++++++++++++++++*/
 #header {
   background-color: #1F2235;
-  padding: 20px 80px 20px 80px;
+  padding: 20px 80px;
   position: fixed;
   width: 100%;
 }
