--- a/styles/main.css
+++ b/styles/main.css
@@ -8,9 +8,6 @@ body {
   color: #fff;
 }
 
-/*+++++++++++++++++++++++++++++++++++++
-    Header Section
-/* ++++++++++++++++++++++++++++++++++++*/
 #header {
   background-color: #1F2235;
   padding: 20px 80px;
@@ -49,7 +46,6 @@ body {
     Home Section
 /* ++++++++++++++++++++++++++++++++++++*/
 #home {
-  /* border: 3px solid red; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -63,7 +59,6 @@ body {
 }
 
 #left-container {
-  /* border: 2px solid blue; */
   margin: -180px 45px 0 0;
   height: 682.5;
   width: 656.52;
@@ -71,7 +66,6 @@ body {
 }
 
 #right-container {
-  /* border: 2px solid green; */
   margin: 0 0 45px 0;
 }
 
@@ -164,52 +158,6 @@ body {
   cursor: pointer;
 }
 
-@media screen and (max-width: 768px) {
-  #header {
-    margin-left: -39px;
-  }
-  #navbar {
-    flex-direction: column;
-    align-items: flex-end;
-  }
-  #navbar {
-    display: none;
-  }
-  #home {
-    flex-direction: column;
-  }
-  #left-container {
-    position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding: 200px 15px 15px 15px;
-  }
-  #right-container {
-    display: none;
-  }
-  #social-icons {
-    justify-content: center;
-    margin-left: 35px;
-  }
-  #intro-text h1 {
-    margin-top: 16px;
-    margin-left: 42px;
-    font-size: 30px;
-    text-align: center;
-  }
-  #intro-text p {
-    font-size: 22px;
-    line-height: 40px;
-    font-weight: lighter;
-    margin-left: 42px;
-    font-family: "Poppins";
-    text-align: center;
-  }
-  #buttons {
-    margin-left: 45px;
-    justify-content: center;
-  }
-}
 /* Services Section */
 #services {
   background-color: #1F2235;
@@ -258,8 +206,7 @@ body {
 }
 
 .cards {
-  /* border: 2px solid darkorange; */
-  background-color: #23263A;
+  background-color: #24263b;
   margin: 20px;
   padding: 50px;
   width: 250px;
@@ -285,7 +232,87 @@ body {
   transition: transform 1.6s;
 }
 
+/* About Me Section */
+#about {
+  background-color: #24263b;
+  padding: 80px;
+  width: auto;
+  height: auto;
+}
+
+.about-text {
+  text-align: center;
+  margin: 0 270px 0 270px;
+  width: 539.98;
+  height: 205.4;
+}
+
+.about-text h2 {
+  font-size: 55px;
+  font-weight: bold;
+  margin: 0 0 25px;
+  width: 539.98;
+  height: 74.4;
+}
+
+.about-text p {
+  line-height: 30px;
+  margin: 0 auto;
+  padding-bottom: 20px;
+}
+
+.about-text hr {
+  width: 40px;
+}
+
+/* Mobile View */
 @media screen and (max-width: 768px) {
+  /*Header Section*/
+  #header {
+    margin-left: -39px;
+  }
+  #navbar {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  #navbar {
+    display: none;
+  }
+  #home {
+    flex-direction: column;
+  }
+  #left-container {
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding: 200px 15px 15px 15px;
+  }
+  #right-container {
+    display: none;
+  }
+  #social-icons {
+    justify-content: center;
+    margin-left: 35px;
+  }
+  #intro-text h1 {
+    margin-top: 16px;
+    margin-left: 42px;
+    font-size: 30px;
+    text-align: center;
+  }
+  #intro-text p {
+    font-size: 22px;
+    line-height: 40px;
+    font-weight: lighter;
+    margin-left: 42px;
+    font-family: "Poppins";
+    text-align: center;
+  }
+  #buttons {
+    margin-left: 45px;
+    justify-content: center;
+  }
+  /* Services Section */
   .services-text {
     flex-direction: column;
     margin: 20px;
@@ -303,5 +330,20 @@ body {
   }
   #grid {
     flex-direction: column;
+  }
+  /* About Section */
+  #about {
+    padding: 22px;
+  }
+  .about-text {
+    text-align: center;
+    margin: 20px;
+  }
+  .about-text h2 {
+    font-size: 60px;
+  }
+  .about-text p {
+    width: 320;
+    height: 90;
   }
 }/*# sourceMappingURL=main.css.map */
