--- a/styles/main.css
+++ b/styles/main.css
@@ -235,19 +235,19 @@ body {
 /* About Me Section */
 #about {
   background-color: #24263b;
-  padding: 80px;
+  padding: 80px 0;
   width: auto;
   height: auto;
 }
 
-.about-text {
+.about-container-one {
   text-align: center;
   margin: 0 270px 0 270px;
   width: 539.98;
   height: 205.4;
 }
 
-.about-text h2 {
+.about-container-one h2 {
   font-size: 55px;
   font-weight: bold;
   margin: 0 0 25px;
@@ -255,14 +255,60 @@ body {
   height: 74.4;
 }
 
-.about-text p {
+.about-container-one p {
   line-height: 30px;
   margin: 0 auto;
   padding-bottom: 20px;
 }
 
-.about-text hr {
+.about-container-one hr {
   width: 40px;
+}
+
+#about-container-two {
+  border: 1px solid red;
+  display: flex;
+  padding: 0 70px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.ab-image {
+  border: 1px solid green;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+
+.ab-text {
+  border: 1px solid blue;
+  margin: 10px;
+}
+.ab-text h2 {
+  font-weight: 900;
+}
+.ab-text p {
+  font-family: "Poppins";
+  line-height: 30px;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 16px;
+  font-family: Poppins;
+  color: #dfdfdf;
+}
+
+.contact-table {
+  border: 1px solid red;
+  padding: 15px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  justify-content: center;
+}
+.contact-table .contact-columns {
+  border: 1px solid orange;
+  padding: 20px;
+  margin: 10px;
 }
 
 /* Mobile View */
@@ -335,15 +381,31 @@ body {
   #about {
     padding: 22px;
   }
-  .about-text {
+  .about-container-one {
     text-align: center;
     margin: 20px;
   }
-  .about-text h2 {
+  .about-container-one h2 {
     font-size: 60px;
   }
-  .about-text p {
+  .about-container-one p {
     width: 320;
     height: 90;
+  }
+  #about-container-two {
+    flex-direction: column;
+    padding: 0px;
+  }
+  .ab-image {
+    padding: 0px;
+  }
+  .ab-text {
+    padding: 0px;
+    text-align: justify;
+    line-height: 26px;
+  }
+  .contact-table {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
   }
 }/*# sourceMappingURL=main.css.map */
