--- a/styles/main.scss
+++ b/styles/main.scss
@@ -288,7 +288,6 @@ body {
 }
 
 #about-container-two {
-    border: 1px solid red;
     display: flex;
     padding: 0 70px;
     justify-content: space-evenly;
@@ -296,7 +295,6 @@ body {
 }
 
 .ab-image {
-    border: 1px solid green;
     justify-content: center;
     align-items: center;
     padding: 40px;
@@ -304,7 +302,6 @@ body {
 }
 
 .ab-text {
-    border: 1px solid blue;
     margin: 10px;
 
     h2 {
@@ -323,19 +320,16 @@ body {
 }
 
 .contact-table {
-    border: 1px solid red;
-    padding: 15px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     justify-content: center;
     
-
-
     .contact-columns{
-        border: 1px solid orange;
-        padding: 20px;
-        margin: 10px;
+        p span {
+            color: $pinkColor;
+            font-weight: bold;
+        }
     }
 }
 
@@ -484,11 +478,6 @@ body {
     .contact-table {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-    
-    
-        .contact-columns{
-            
-        }
     }
 }
 
