fixed overflowing spaces on mobile view

--- a/styles/main.css
+++ b/styles/main.css
@@ -306,6 +306,64 @@ body {
   font-weight: bold;
 }
 
+#skills {
+  background-color: #1F2235;
+  padding: 80px 0 60px 0;
+  width: auto;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left-skills {
+  border: 1px solid red;
+  width: 550px;
+  margin: 25px 15px 5px 5px;
+  padding: 0 20px 0 0;
+}
+.left-skills p {
+  color: #FF4A57;
+}
+.left-skills h2 {
+  font-size: 62px;
+  font-weight: bolder;
+  font-family: "Poppins";
+  line-height: 1.2;
+  margin: 4px 0 0 0;
+}
+.left-skills h3 {
+  font-family: "Poppins";
+  line-height: 26px;
+  font-weight: normal;
+  font-style: normal;
+  color: #dfdfdf;
+  font-size: 16px;
+  line-height: 30px;
+  text-align: justify;
+}
+
+.right-skills {
+  border: 1px solid blue;
+  height: 300px;
+  width: 550px;
+  margin: 5px;
+}
+
+.hireMe-btn {
+  border: 2px solid #FF4A57;
+  font-family: "Poppins";
+  background-color: transparent;
+  color: #fff;
+  font-weight: 500;
+  display: inline-block;
+  padding: 13px 40px;
+  border-radius: 50px;
+  font-size: 15px;
+  margin: 15px 14px 0 0;
+  cursor: pointer;
+}
+
 /* Mobile View */
 @media screen and (max-width: 768px) {
   /*Header Section*/
@@ -358,7 +416,6 @@ body {
     flex-direction: column;
     margin: 20px;
     width: 320;
-    height: 309.79;
   }
   .services-text h2 {
     margin-bottom: 25px;
@@ -371,6 +428,7 @@ body {
   }
   #grid {
     flex-direction: column;
+    flex-wrap: nowrap;
   }
   /* About Section */
   #about {
@@ -402,5 +460,18 @@ body {
   .contact-table {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+  }
+  #skills {
+    flex-direction: column;
+  }
+  .left-skills {
+    margin: 0;
+    padding: 0;
+    width: 350px;
+  }
+  .right-skills {
+    margin: 0;
+    padding: 0;
+    width: 300px;
   }
 }/*# sourceMappingURL=main.css.map */
